--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 Linear_Kalman_Filter/.DS_Store
 Linear_Kalman_Filter/.ipynb_checkpoints/
 Linear_Kalman_Filter/assets/.DS_Store
+
+#* Extended Kalman Filter *#
+Extended_Kalman_Filter/.DS_Store
+Extended_Kalman_Filter/.ipynb_checkpoints/
+Extended_Kalman_Filter/assets/.DS_Store
